<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:orientation="horizontal"
    android:gravity="center_vertical">
    <ImageView
        android:id="@+id/avatar"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_margin="16dp"
        android:src="@drawable/avatar"
        android:contentDescription="@string/avatar" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/short_name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/number_of_riders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/plus_one_rider"
        android:textSize="18sp"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_more"
        android:contentDescription="@string/more_options" />
</LinearLayout>