<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:gravity="center_vertical">
    <ImageView
        android:id="@+id/avatar"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_margin="16dp"
        android:layout_alignParentLeft="true"
        android:src="@drawable/avatar"
        android:contentDescription="@string/avatar"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_more"
        android:contentDescription="@string/more_options"
        tools:ignore="RtlHardcoded" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/avatar"
        android:layout_toLeftOf="@id/more"
        android:layout_centerVertical="true"
        tools:ignore="RtlHardcoded">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">
            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/short_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/number_of_riders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/plus_one_rider"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>